<resources>
    <string name="app_name">iSport</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_register">新用户注册</string>
    <string name="login">登  陆</string>
    <string name="login_dialog_text">正在登录…</string>
    <string name="register">注  册</string>
    <string name="nickname">昵称</string>
    <string name="create_tip">写点什么吧…</string>
    <string name="publish">发表</string>
    <string name="camera">相机</string>
    <string name="album">图库</string>
    <string name="cancel">取消</string>
    <string name="choose_photo">精准表达？</string>
    <string name="deal_img">正在加载图片…</string>
    <string name="load_more_tip">加载完成</string>
    <string name="loading">正在加载中…</string>
    <string name="user_space">个人主页</string>
    <string name="user_detail">修改资料</string>
    <string name="avatar">头像</string>
    <string name="confirm">确认</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="talking">签名</string>
    <string name="change_data">修改资料</string>
    <string name="run">跑步</string>
    <string name="total_distance">累计路程:</string>
    <string name="use_calorie">消耗Calorie:</string>
    <string name="bike">骑行</string>
    <string name="walk">健走</string>
    <string name="yoga">瑜伽</string>
    <string name="total_time">累计时长</string>
    <string name="total_walk">累计步数</string>
    <string name="init_time">——</string>
    <string name="init_distance">——</string>
    <string name="finish">结束</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="run_GO">GO</string>
    <string name="setTarget">设定目标</string>
    <string name="running">Running</string>
    <string name="distance_km">距离(公里)</string>
    <string name="m_min">配速(m/min)</string>
    <string name="min">时长(min)</string>
    <string name="Kcal">热量(千卡)</string>
    <string name="_0_00">0.00</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="saving_data">正在保存数据</string>
    <string name="_0_00km">0.00公里</string>
    <string name="_00min">00分</string>
    <string name="_0Kcal">0千卡</string>
    <string name="km_h_china">配速(公里/时)</string>
    <string name="min_china">时间(分)</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="changeTalking">修改签名</string>
    <string name="changeNick">修改昵称</string>
    <string name="changeHeight">修改身高</string>
    <string name="changeWeight">修改体重</string>
    <string name="step_count">步数</string>
    <string name="kcal">千卡</string>
    <string name="km">公里</string>
    <string name="my_data">我的运动数据</string>
    <string name="calorie_consumption">卡路里消耗</string>
    <string name="total_km">累计运动/公里</string>
    <string name="publish_dynamic">发表动态</string>
    <string name="_dot">:</string>
    <string name="setting">设置</string>
    <string name="sport_permission">运动权限设置</string>
    <string name="account">账户管理与绑定</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="withdraw">收回</string>
    <string name="look_more">查看更多</string>
    <string name="scan">浏览</string>
    <string name="network_error">请检查网络连接是否正常，点我重试</string>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assignment">任务清单</string>
    <string name="course">运动教程</string>
    <string name="list">清单</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jump">跳过</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="share">一键分享</string>
    <string name="four_pages">任务助手</string>
    <string name="aerobic_exercise">有氧运动</string>
    <string name="p_m_exercise">身心锻炼</string>
    <string name="course_center">课程中心</string>
    <string name="hot_sports">热门运动</string>
    <string name="basketball">篮球</string>
    <string name="dumbbell">哑铃</string>
    <string name="taekwondo">跆拳道</string>
    <string name="devil_body">魔鬼身材训练营</string>
    <string name="sports_energy">运动能量</string>

</resources>
