<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RidingActivity">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/riding_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/riding_finish_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="125dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_finish_riding"
        android:text="@string/finish"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="20dp"
        android:elevation="8dp"
        app:cardCornerRadius="15dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/riding_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/_0_00km"
                android:textSize="28sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/riding_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/_00min"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/riding_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/_0Kcal"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/riding_time" />

            <Button
                android:id="@+id/riding_trace_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_start_riding"
                android:text="@string/start"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>