<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_walk"
    tools:context=".activity.WalkActivity">

    <TextView
        android:id="@+id/tv_step_count"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@android:color/darker_gray"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_km"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:gravity="center"
        android:text="@string/_0_00"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:text="@string/km"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_km" />

    <TextView
        android:id="@+id/tv_kcal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/kcal"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_kcal" />

    <ImageButton
        android:id="@+id/ib_finish"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/walk_ib_bg"
        android:src="@drawable/round_crop_square_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>